# ChangeLog file for monetdb-java
# This file is updated with Maddlog

* Thu Nov  7 2024 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- In JdbcClient when running the \vsci or \vdbi or \vsi commands, we now
  suppress "42000 SELECT: insufficient privileges for ..." and
  "42000 SELECT: access denied for ..." error messages when the connected user
  does not have 'monetdb' or 'sysadmin' privileges, needed for some validations.

* Wed Jun 19 2024 Joeri van Ruth <joeri.van.ruth@monetdbsolutions.com>
- Implemented Connection#set/getClientInfo, and send sensible default info
  at connect time. This can be controlled with the properties 'client_info=on/off',
  'client_application=ApplicationName' and 'client_remark=Other Useful Info'.

* Thu Apr  4 2024 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Corrected ResultSetMetaData methods getColumnTypeName(), getPrecision(),
  getColumnDisplaySize() and ParameterMetaData methods getParameterTypeName()
  and getPrecision() for the interval data types. They now return
  more precise information for the 13 possible interval data types.

* Thu Mar  7 2024 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Improved DatabaseMetaData.getTypeInfo(). It now also returns the serial
  and bigserial data types and all 13 possible interval data types.

* Thu Dec 28 2023 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- In ResultSet.getObject(column, Class<T> type) and
  ResultSet.getObject(column, Map<String,Class<?>>) methods added support
  to return objects for classes: java.time.LocalDate, java.time.LocalDateTime
  and java.time.LocalTime.

* Wed Dec 20 2023 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Enhanced DatabaseMetaData.getTables() method by adding support for SQL
  table type names: 'BASE TABLE', 'GLOBAL TEMPORARY' and 'LOCAL TEMPORARY'
  in parameter types[].  These are SQL synonyms of MonetDB table type names: